--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "core-js": "^3.6.4",
     "git": "^0.1.5",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-burger-menu": "^2.0.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
