--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.27",
+    "@fortawesome/free-brands-svg-icons": "^5.12.1",
+    "@fortawesome/free-solid-svg-icons": "^5.12.1",
+    "@fortawesome/vue-fontawesome": "^0.1.9",
+    "axios": "^0.19.2",
     "core-js": "^3.6.4",
-    "git": "^0.1.5",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "git": "^0.1.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
