--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "@fortawesome/vue-fontawesome": "^0.1.9",
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "git": "^0.1.5",
     "vue": "^2.6.11",
-    "git": "^0.1.5"
+    "vue-router": "^3.1.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
