--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
-    "gi: "^0.1.5"
+    "git": "^0.1.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
